--- a/ros2-ORB_SLAM3/CMakeLists.txt
+++ b/ros2-ORB_SLAM3/CMakeLists.txt
@@ -43,8 +43,13 @@ set(LIBS
 add_executable(slam src/slam.cpp src/common.cpp)
 target_link_libraries(slam ${LIBS})
 ament_target_dependencies(slam rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
-
 install(TARGETS slam
+  DESTINATION lib/${PROJECT_NAME})
+
+add_executable(mono src/mono.cpp src/common.cpp)
+target_link_libraries(mono ${LIBS})
+ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
+install(TARGETS mono
   DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
