rgbd init & exit

--- a/ros2-ORB_SLAM3/CMakeLists.txt
+++ b/ros2-ORB_SLAM3/CMakeLists.txt
@@ -46,10 +46,16 @@ ament_target_dependencies(slam rclcpp sensor_msgs cv_bridge message_filters tf2_
 install(TARGETS slam
   DESTINATION lib/${PROJECT_NAME})
 
-add_executable(mono src/mono.cpp src/common.cpp)
-target_link_libraries(mono ${LIBS})
-ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
-install(TARGETS mono
+#add_executable(mono src/mono.cpp src/common.cpp)
+#target_link_libraries(mono ${LIBS})
+#ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
+#install(TARGETS mono
+#  DESTINATION lib/${PROJECT_NAME})
+
+add_executable(rgbd src/rgbd.cpp src/common.cpp)
+target_link_libraries(rgbd ${LIBS})
+ament_target_dependencies(rgbd rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
+install(TARGETS rgbd
   DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
