--- a/ros2-ORB_SLAM3/CMakeLists.txt
+++ b/ros2-ORB_SLAM3/CMakeLists.txt
@@ -40,22 +40,22 @@ set(LIBS
     -lboost_serialization
     -lcrypto)
 
-add_executable(slam src/slam.cpp src/common.cpp)
-target_link_libraries(slam ${LIBS})
-ament_target_dependencies(slam rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
-install(TARGETS slam
+add_executable(mono src/mono.cpp src/common.cpp)
+target_link_libraries(mono ${LIBS})
+ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
+install(TARGETS mono
   DESTINATION lib/${PROJECT_NAME})
-
-#add_executable(mono src/mono.cpp src/common.cpp)
-#target_link_libraries(mono ${LIBS})
-#ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
-#install(TARGETS mono
-#  DESTINATION lib/${PROJECT_NAME})
 
 add_executable(rgbd src/rgbd.cpp src/common.cpp)
 target_link_libraries(rgbd ${LIBS})
 ament_target_dependencies(rgbd rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
 install(TARGETS rgbd
+  DESTINATION lib/${PROJECT_NAME})
+
+add_executable(stereo src/stereo.cpp src/common.cpp)
+target_link_libraries(stereo ${LIBS})
+ament_target_dependencies(stereo rclcpp sensor_msgs cv_bridge message_filters tf2_ros tf2 image_transport Pangolin)
+install(TARGETS stereo
   DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
